Added solutions for Week 2

--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
                             <li><a href="share/Week 2 Exercise (Python).ipynb">Group Exercise: Jupyter Notebook Template (ipynb)</a></li>
                             <li><a href="share/Week 2 Exercise R.r">Group Exercise: R Script Template (.r)</a></li>
                         </ul>
+                        Solutions
+                        <ul class="syllabus">
+                            <li><a href="share/solutions/Week 2 Exercise (Python) - Solutions.ipynb">Python Solutions (ipynb)</a></li>
+                            <li><a href="share/solutions/Week 2 Exercise R - Solutions.r">R Solutions (.r)</a></li>
+                        </ul>
+
                     </li>
                     <li class="schedday">OCTOBER 7: STATISTICS AND EXPLORATORY DATA ANALYSIS
                         <ul class="syllabus">
