Added stuff for week 4

--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                             <li>Week 2, Session 2:
                                 <a href="share/Week 2-2.pdf">PDF</a>
                             </li>
+                            <li>Week 3, Session 2:
+                                <a href="share/Week 3-2.pdf">PDF</a>
+                            </li>
+
                         </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
@@ -182,6 +186,17 @@
                             <li><a href="share/Exercises_Week3.pdf">"Homework" Exercises (PDF)</a> </li>
                             <li><a href="share/Exercises_Week3_Group.pdf">Group Exercises (PDF)</a></li>
                             <li><a href="share/xvalues.csv">Group Exercise: Data File (xvalues.csv)</a></li>
+                        </ul>
+                        Solutions
+                        <ul class="syllabus">
+                            <li><a href="share/solutions/Week 3 Exercise 1 Solutions.ipynb">Exercise 1 Solutions (ipynb)</a></li>
+                            <li><a href="share/solutions/Week 3 Exercise 2 Solutions.ipynb">Exercise 2 Solutions (ipynb)</a></li>
+                        </ul>
+                    </li>
+                    <li class="schedday">OCTOBER 14: CODING WORKFLOWS
+                        <ul class="syllabus">
+                            <li><a href="share/Exercises_Week4.pdf">"Homework" Exercises (PDF)</a> </li>
+                            <li><a href="share/Exercises_Week4_Group.pdf">Group Exercises (PDF)</a></li>
                         </ul>
                     </li>
                 </ul>
