Week 5 Exercises and aux files

--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
                             <li>Week 4, Session 2:
                                 <a href="share/Week 4-2.pdf">PDF</a>
                             </li>
-
+                            <li>Week 5, Session 1:
+                                <a href="share/Week 5-1.pdf">PDF</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
@@ -229,6 +231,15 @@
                         <ul class="syllabus">
                             <li><a href="share/Exercises_Week4.pdf">"Homework" Exercises (PDF)</a> </li>
                             <li><a href="share/Exercises_Week4_Group.pdf">Group Exercises (PDF)</a></li>
+                        </ul>
+                    </li>
+                    <li class="schedday">OCTOBER 21: PRACTICAL CODING AND STATISTICS IN ASTRONOMY
+                        <ul class="syllabus">
+                            <li><a href="share/Exercises_Week5.pdf">"Homework" Exercises (PDF)</a> </li>
+                            <li><a href="share/Exercises_Week5_Group.pdf">Group Exercises (PDF)</a></li>
+                            <li><a href="share/Get_SDSS_spectra.ipynb">Jupyter Notebook: Get_SDSS_spectra.ipynb</a></li>
+                            <li><a href="share/error_generating_script.py">Code File: error_generating_script.py</a></li>
+                            <li><a href="share/week5_exercise.R">Code File: week5_exercise.R</a></li>
                         </ul>
                     </li>
                 </ul>
