--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="home">
 
             <div id="mainbox">
-                <h1 id="title">STARFISH SCHOOL 2021</h1>
+                <h1 id="title">STARFISH SCHOOL 2022</h1>
                 <h2 id="subtitle">A Virtual Bootcamp on Computing, Statistics, and Scholarship for Astronomy Graduate Students
                 </h2>
                 <p id="affil">David A. Dunlap Department for Astronomy &amp; Astrophysics, University of Toronto <br /> Dunlap Institute for Astronomy &amp; Astrophysics, University of Toronto <br /> Sidrat Research
@@ -52,7 +52,7 @@
                         <li>Create a community of knowledge-sharing amongst the incoming graduate class</li>
                     </ul>
 
-                    The five bootcamp sessions will be held virtually via Zoom during September and October 2021. The sessions will involve both instructor-led demonstrations and guided workbooks. The bootcamp will be strongly encouraged for all incoming grad students, as
+                    The five bootcamp sessions will be held in person Zoom during September 2022. The sessions will involve both instructor-led demonstrations and guided workbooks. The bootcamp will be strongly encouraged for all incoming grad students, as
                     well as open to all upper year grad students.
                 </div>
 
@@ -66,10 +66,10 @@
             <div class="contentbox">
                 <div class="boxtitle">Schedule</div>
                 <ul class="sched">
-                    <li class="schedday">WEEK OF SEPTEMBER 16: SCRATCHING THE SURFACE
+                    <li class="schedday">FRIDAY, SEPTEMBER 9: SCRATCHING THE SURFACE
                         <ul class="syllabus">
                             <li>How to effectively use the NASA Abstract Data Service</li>
-                            <li> How to access literature through the University of Toronto Library Services</li>
+                            <li> How to access literature through the University of Toronto Library Services, how to handle copyright, and how to access Course Reserves</li>
                             <li>
                                 How to use LaTeX effectively for academic writing
                             </li>
@@ -79,7 +79,7 @@
                             <li>Using the Command Line</li>
                         </ul>
                     </li>
-                    <li class="schedday">WEEK OF SEPTEMBER 23: FUNDAMENTALS OF CODING
+                    <li class="schedday">WEDNESDAY, SEPTEMBER 14: FUNDAMENTALS OF CODING
                         <ul class="syllabus">
                             <li>The primary ways to work with Python and R</li>
                             <li>The fundamental concepts of coding </li>
@@ -88,19 +88,19 @@
 
                         </ul>
                     </li>
-                    <li class="schedday">WEEK OF OCTOBER 7: STATISTICS AND EXPLORATORY DATA ANALYSIS
-                        <ul class="syllabus">
-                            <li>The fundamentals of descriptive statistics and distributions</li>
-                            <li>How to work with optimization (modelling and fitting), interpolation, and smoothing algorithms in Python and R</li>
-                        </ul>
-                    </li>
-                    <li class="schedday">WEEK OF OCTOBER 14: CODING WORKFLOWS
+                    <li class="schedday">FRIDAY, SEPTEMBER 16: CODING WORKFLOWS
                         <ul class="syllabus">
                             <li>How to use version control systems (Git/GitHub)</li>
                             <li>Best practices of version control and documentation (including Markdown)</li>
                         </ul>
                     </li>
-                    <li class="schedday">WEEK OF OCTOBER 21: PRACTICAL CODING AND STATISTICS IN ASTRONOMY
+                    <li class="schedday">WEDNESDAY, SEPTEMBER 21: STATISTICS AND EXPLORATORY DATA ANALYSIS
+                        <ul class="syllabus">
+                            <li>The fundamentals of descriptive statistics and distributions</li>
+                            <li>How to work with optimization (modelling and fitting), interpolation, and smoothing algorithms in Python and R</li>
+                        </ul>
+                    </li>
+                    <li class="schedday">FRIDAY, SEPTEMBER 23: PRACTICAL CODING AND STATISTICS IN ASTRONOMY
                         <ul class="syllabus">
                             <li>The basics of relational databases (SQL)</li>
                             <li>The fundamental steps of debugging</li>
@@ -117,8 +117,7 @@
                 <div class="boxtitle">Setup</div>
                 <div>
                     <div>
-                        <center>The Setup Guide for the 2021 Starfish School (for Windows, MacOS, and Linux) is now available here: <br/>
-                            <a href="share/Setup Document.pdf">Setup Document (Version 2.0)</a>
+                        <center>The Setup Guide for the 2022 Starfish School will be made available here.
                         </center>
                     </div>
                 </div>
@@ -130,38 +129,7 @@
 
                 <ul class="resources">
                     <li class="resourcebox">LECTURE/DEMO SLIDES
-                        <ul class="resourcelist">
-                            <li>Week 1, Session 1:
-                                <a href="share/Week 1-1.pdf">PDF</a>
-                            </li>
-                            <li>Week 1, Session 2:
-                                <a href="share/Week 1-2.pdf">PDF</a>
-                            </li>
-                            <li>Week 2, Session 1:
-                                <a href="share/Week 2-1.pdf">PDF</a>
-                            </li>
-                            <li>Week 2, Session 2:
-                                <a href="share/Week 2-2.pdf">PDF</a>
-                            </li>
-                            <li>Week 3, Session 1:
-                                <a href="share/Week 3-1_annotated.pdf">PDF</a>
-                            </li>
-                            <li>Week 3, Session 2:
-                                <a href="share/Week 3-2.pdf">PDF</a>
-                            </li>
-                            <li>Week 4, Session 1:
-                                <a href="share/Week 4-1.pdf">PDF</a>
-                            </li>
-                            <li>Week 4, Session 2:
-                                <a href="share/Week 4-2.pdf">PDF</a>
-                            </li>
-                            <li>Week 5, Session 1:
-                                <a href="share/Week 5-1.pdf">PDF</a>
-                            </li>
-                            <li>Week 5, Session 2:
-                                <a href="share/Week 5-2.pdf">PDF</a>
-                            </li>
-                        </ul>
+                        <div>Lecture Slides will go here.</div>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
                         <ul class="resourcelist">
@@ -218,55 +186,7 @@
         <section id="exercises">
             <div class="contentbox">
                 <div class="boxtitle">Exercises</div>
-                <ul class="sched">
-                    <li class="schedday">SEPTEMBER 16: SCRATCHING THE SURFACE
-                        <ul class="syllabus">
-                            <li><a href="share/Exercises_Week1.pdf">Main Exercises (PDF)</a> </li>
-                        </ul>
-                    </li>
-                    <li class="schedday">SEPTEMBER 23: FUNDAMENTALS OF CODING
-                        <ul class="syllabus">
-                            <li><a href="share/Exercises_Week2.pdf">"Homework" Exercises (PDF)</a> </li>
-                            <li><a href="share/Exercises_Week2_Group.pdf">Group Exercises (PDF)</a></li>
-                            <li><a href="share/data.csv">Group Exercise: Data File (data.csv)</a></li>
-                            <li><a href="share/Week 2 Exercise (Python).ipynb">Group Exercise: Jupyter Notebook Template (ipynb)</a></li>
-                            <li><a href="share/Week 2 Exercise R.r">Group Exercise: R Script Template (.r)</a></li>
-                        </ul>
-                        Solutions
-                        <ul class="syllabus">
-                            <li><a href="share/solutions/Week 2 Exercise (Python) - Solutions.ipynb">Python Solutions (ipynb)</a></li>
-                            <li><a href="share/solutions/Week 2 Exercise R - Solutions.r">R Solutions (.r)</a></li>
-                        </ul>
-
-                    </li>
-                    <li class="schedday">OCTOBER 7: STATISTICS AND EXPLORATORY DATA ANALYSIS
-                        <ul class="syllabus">
-                            <li><a href="share/Exercises_Week3.pdf">"Homework" Exercises (PDF)</a> </li>
-                            <li><a href="share/Exercises_Week3_Group.pdf">Group Exercises (PDF)</a></li>
-                            <li><a href="share/xvalues.csv">Group Exercise: Data File (xvalues.csv)</a></li>
-                        </ul>
-                        Solutions
-                        <ul class="syllabus">
-                            <li><a href="share/solutions/Week 3 Exercise 1 Solutions.ipynb">Exercise 1 Solutions (ipynb)</a></li>
-                            <li><a href="share/solutions/Week 3 Exercise 2 Solutions.ipynb">Exercise 2 Solutions (ipynb)</a></li>
-                        </ul>
-                    </li>
-                    <li class="schedday">OCTOBER 14: CODING WORKFLOWS
-                        <ul class="syllabus">
-                            <li><a href="share/Exercises_Week4.pdf">"Homework" Exercises (PDF)</a> </li>
-                            <li><a href="share/Exercises_Week4_Group.pdf">Group Exercises (PDF)</a></li>
-                        </ul>
-                    </li>
-                    <li class="schedday">OCTOBER 21: PRACTICAL CODING AND STATISTICS IN ASTRONOMY
-                        <ul class="syllabus">
-                            <li><a href="share/Exercises_Week5.pdf">"Homework" Exercises (PDF)</a> </li>
-                            <li><a href="share/Exercises_Week5_Group.pdf">Group Exercises (PDF)</a></li>
-                            <li><a href="share/Get_SDSS_spectra.ipynb">Jupyter Notebook: Get_SDSS_spectra.ipynb</a></li>
-                            <li><a href="share/error_generating_script.py">Code File: error_generating_script.py</a></li>
-                            <li><a href="share/week5_exercise.R">Code File: week5_exercise.R</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                <div>Exercises for the class will go here.</div>
             </div>
         </section>
         <section id="contact">
@@ -276,8 +196,16 @@
                 <div class="organizers"><b>Organizers:</b>
                     <ul>
                         <li>
-                            <div class="profilepic" id="gwen"> </div>
-                            <a href="https://www.astro.utoronto.ca/~eadie/">Prof. Gwendolyn Eadie</a> <br> gwen.eadie@utoronto.ca
+                            <div class="profilepic" id="josh"> </div>
+                            <a href="https://joshspeagle.com/">Prof. Josh Speagle</a> <br> j.speagle@utoronto.ca
+                        </li>
+                        <li>
+                            <div class="profilepic" id="ting"> </div>
+                            <a href="https://sazabi4.github.io/">Prof. Ting Li</a> <br>  ting.li@astro.utoronto.ca
+                        </li>
+                        <li>
+                            <div class="profilepic" id="nuree"> </div>
+                            <a href="https://www.astro.utoronto.ca/people/faculty/name/nuree-lee/">NuRee Lee</a> <br> nu.lee@utoronto.ca
                         </li>
                         <li>
                             <div class="profilepic" id="renee"> </div>
