Added link to setup document

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                 <div class="boxtitle">Setup</div>
                 <div>
                     <div>
-                        <center>The Setup Guide for the 2022 Starfish School will be made available here.
+                        <center>The Setup Guide for the 2022 Starfish School (for Windows, MacOS, and Linux) is now available here: <br/>
+                            <a href="share/Setup Document.pdf">Setup Document (Version 3.0)</a>
                         </center>
                     </div>
                 </div>
