Exercise and Slides 1

--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
 
                 <ul class="resources">
                     <li class="resourcebox">LECTURE/DEMO SLIDES
-                        <div>Lecture Slides will go here.</div>
+                        <ul class="resourcelist">
+                            <li>Session 1:
+                                <a href="share/slides/Session 1.pdf">PDF</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
                         <ul class="resourcelist">
@@ -187,7 +191,13 @@
         <section id="exercises">
             <div class="contentbox">
                 <div class="boxtitle">Exercises</div>
-                <div>Exercises for the class will go here.</div>
+                <ul class="sched">
+                    <li class="schedday">SEPTEMBER 9: SCRATCHING THE SURFACE
+                        <ul class="syllabus">
+                            <li><a href="share/exercises/Exercises - Session 1.pdf">Main Exercises (PDF)</a> </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </section>
         <section id="contact">
