--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                             <li>Session 2:
                                 <a href="share/slides/Session 2.pdf">PDF</a>
                             </li>
+                            <li>Session 3:
+                                <a href="share/slides/Session 3.pdf">PDF</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
@@ -233,6 +236,11 @@
                                     (.ipynb)</a></li>
                             <li><a href="share/Session 2 Exercise R.r">R Exercise File (.ipynb)</a></li>
                             <li><a href="share/test.dat">Test Data File (.dat)</a></li>
+                        </ul>
+                    </li>
+                    <li class="schedday">SEPTEMBER 16: CODING WORKFLOWS
+                        <ul class="syllabus">
+                            <li><a href="share/exercises/Exercises - Session 3.pdf">Main Exercises (PDF)</a> </li>
                         </ul>
                     </li>
                 </ul>
