--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                             <li>Session 3:
                                 <a href="share/slides/Session 3.pdf">PDF</a>
                             </li>
+                            <li>Session 4:
+                                <a href="share/slides/Session 4.pdf">PDF</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
@@ -243,6 +246,18 @@
                             <li><a href="share/exercises/Exercises - Session 3.pdf">Main Exercises (PDF)</a> </li>
                         </ul>
                     </li>
+                    <li class="schedday">SEPTEMBER 23: PRACTICAL CODING AND STATISTICS IN ASTRONOMY
+                        <ul class="syllabus">
+                            <li><a href="share/exercises/Exercises - Session 4.pdf">Main Exercises (PDF)</a> </li>
+                            <li><a href="share/Get_SDSS_spectra.ipynb">Get SDSS Spectra Jupyter Notebook (.ipynb)</a>
+                            </li>
+                            <li><a href="share/error_generating_script.py">Error Generating Script (.py)</a></li>
+                            <li><a href="share/session4_exercise.R">Session 4 R Exercise (.R)</a></li>
+                            <li><a href="share/Exercise_Gaia_astroquery.ipynb">Gaia Astroquery Exercise (.ipynb)</a>
+                            </li>
+                        </ul>
+                    </li>
+
                 </ul>
             </div>
         </section>
