Added Session 5 details

--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                             <li>Session 4:
                                 <a href="share/slides/Session 4.pdf">PDF</a>
                             </li>
+                            <li>Session 5:
+                                <a href="share/slides/Session 5.pdf">PDF</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="resourcebox">LaTeX RESOURCES
@@ -257,7 +260,16 @@
                             </li>
                         </ul>
                     </li>
-
+                    <li class="schedday">OCTOBER 7: STATISTICS AND EXPLORATORY DATA ANALYSIS
+                        <ul class="syllabus">
+                            <li><a href="share/exercises/Exercises - Session 5.pdf">Main Exercises (PDF)</a> </li>
+                            <li><a href="share/Session5_Exercise_1.ipynb">Exercise 1 Jupyter Notebook (.ipynb)</a>
+                            </li>
+                            <li><a href="share/Spline_GP_demo.ipynb">Spline GP Demo (.ipynb)</a></li>
+                            <li><a href="share/Fit_your_data_demo.ipynb">Fit Your Data Demo (.ipynb)</a></li>
+                    </li>
+                </ul>
+                </li>
                 </ul>
             </div>
         </section>
